[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["boison88 <boison88@mail.ru>"]
readme = "README.md"
packages = [{ include = "brain_games" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Education",
    "License :: Freeware",
    "Natural Language :: Russian",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
